variants/geany-bobgui/subprojects/bobgui/testsuite/css/parser/rotate3d-crash.errors
rotate3d-crash.css:2:31-32: error: BOBGUI_CSS_PARSER_ERROR_SYNTAX
